[project]
name = "utcc-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # environment dependencies
    "python-dotenv>=1.1.1",

    # API  dependencies
    "line-bot-sdk>=3.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.2",


    # ML dependencies
    "datasets>=4.8.5",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    
]
